tests/sumo/basic/tls/NEMA/errors/1/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading additional-files from 'input_additional2.add.xml' ... done (1ms).
Loading done.
Simulation version v1_10_0+2239-a6d3983 started with time: 0.00
Simulation ended at time: 3765.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 0.91s
 Real time factor: 4128.29
 UPS: 220912.280702
Vehicles: 
 Inserted: 2774
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 376.93
 Speed: 7.17
 Duration: 72.63
 WaitingTime: 33.21
 TimeLoss: 53.05
 DepartDelay: 0.93

